[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.52.0", features = [] }
winapi = { version = "0.3.9", features = [
    "fileapi",
    "handleapi",
    "processenv",
    "winbase",
    "winnt",
    "namedpipeapi",
] }
log = "0.4.20"
simple_logger = "4.3.3"
pretty_env_logger = "0.5.0"
env_logger = "0.10.1"
