[package]
name = "remote_terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
laminar = "0.5.0"
winapi = { version = "0.3.9", features = [
    "winbase",
    "processenv",
    "namedpipeapi",
] }

[dev-dependencies]
log = "0.4.20"
env_logger = "0.10.1"

[[example]]
name = "app"
path = "examples/app.rs"

[[example]]
name = "remote_terminal"
path = "examples/remote_terminal.rs"
